--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,21 +3,13 @@
 @{
     ViewData["Title"] = "فروشگاه  من";
 }
-
 <div class="text-center">
     <h1 class="display-4">به فروشگاه ما خوش آمدید</h1>
+    <hr />
     <div class="row">
         @foreach (var item in Model)
         {
-            <div class="col-3">
-                <div class="card">
-                    <img src="Images/@(item.Id).png" height="160" width="160" class="card-img-top img-thumbnail " />
-                    <div class="card-body">
-                        <h5 class="card-title">@item.Name</h5>
-                        <a asp-action="Detail"asp-controller="Home"asp-route-id="@item.Id">جزییات محصول</a>
-                    </div>
-                </div>
-            </div>
+            <partial name="_BoxProduct" model="@item"/>
         }
     </div>
 </div>
