--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -6,20 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] </title>
     @* <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-     *@
-   <link href="~/lib/bootstrap4/css/bootstrap-rtl.css" rel="stylesheet" />
+    *@
+    <link href="~/lib/bootstrap4/css/bootstrap-rtl.css" rel="stylesheet" />
     <link href="https://cdn.rawgit.com/rastikerdar/sahel-font/v1.0.0-alpha23/dist/font-face.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="css/Style.css"/>
+    <link rel="stylesheet" href="css/Style.css" />
     @* <link rel="stylesheet" href="~/css/site.css" /> *@
 </head>
 
-<body  class="rtl" style="font-family: Sahel,sans-serif;" >
+<body class="rtl" style="font-family: Sahel,sans-serif;">
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">فروشگاه من</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse"
-                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
@@ -28,8 +28,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">خانه</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ContactUs">تماس
-                                با ما</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ContactUs">
+                                تماس
+                                با ما
+                            </a>
                         </li>
                     </ul>
                 </div>
@@ -37,9 +39,15 @@
         </nav>
     </header>
     <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
+        <div class="row">
+            <div class="col-md-3">
+                @await Component.InvokeAsync("ProductGroupsComponent")
+            </div>
+            <div class="col-md-9">
+                @RenderBody()
+            </div>
+        </div>
+
     </div>
 
     <footer class="border-top footer text-muted">
