Create Users Model snd init in database and Create Form signup and login

--- a/Views/Home/ContactUs.cshtml
+++ b/Views/Home/ContactUs.cshtml
@@ -19,7 +19,7 @@
     <div class="col-md-9">
         <div class="jumbotron">
             <h1 class="display-3">به فروشگاه ما خوش آمدید</h1>
-            <p class="lead">میتوانید از طریق راه های ارتباطی با ما ذر تماس باشید</p>
+            <p class="lead">میتوانید از طریق راه های ارتباطی با ما در تماس باشید</p>
             <hr class="my-4">
             <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
             <p class="lead">
