--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -4,12 +4,11 @@
     ViewData["Title"] = "Login";
 }
 
-<h1>Login</h1>
+<h1>ورود به سایت</h1>
 
-<h4>LoginViewModel</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-12">
         <form asp-action="Login">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -28,10 +27,13 @@
                 </label>
             </div>
             <div class="form-group">
-                <input type="submit" value="ورود" class="btn btn-success" />
+                <input type="submit" value="ورود" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
